# dw_robot_ws

./: .gitignore  CLAUDE.md  Receiver_Specifications.md  motordriver.py
.claude/: CLAUDE.md
docs/claude/: 00_project_overview.md  01_hardware.md  02_control_modes.md  03_motor_pnt50.md  04_camera_perception.md  05_sensors.md  06_network_development.md  07_architecture_coding_rules.md  99_todo.md
dw_robot_ws/: .gitignore
dw_robot_ws/src/dw_robot_base/: setup.cfg  setup.py
dw_robot_ws/src/dw_robot_bringup/: setup.cfg
dw_robot_ws/src/dw_robot_description/: package.xml  setup.cfg
dw_robot_ws/src/hwt901b_driver/: setup.cfg
imu_spec/: HWT901B-TTL  REAM ME.txt
src/dw_robot_base/: package.xml  setup.py
src/dw_robot_base/config/: base_controller.yaml  cmd_vel_mux.yaml  cmd_vel_safety.yaml  fake_diff_drive.yaml  pnt50_driver.yaml  rf_arduino.yaml
src/dw_robot_base/dw_robot_base/: base_controller_node.py  cmd_vel_safety_node.py  keyboard_brake_node.py  odom_from_pnt50_feedback_node.py  pnt50_driver_node.py  rc_pnt50_serial_node.py  rf_arduino_node.py  usb_camera_node.py
src/dw_robot_base/launch/: keyboard_fake.launch.py  keyboard_pnt50.launch.py  pnt50_driver.launch.py  rf_fake.launch.py  rf_mecanum.launch.py  rf_pnt50.launch.py  rf_pnt50_rviz.launch.py
src/dw_robot_base/urdf/: rf_pnt50_robot.urdf.xacro
src/dw_robot_bringup/: package.xml  setup.py
src/dw_robot_bringup/launch/: sim_bringup.launch.py
src/dw_robot_description/: setup.py
src/dw_robot_description/launch/: display.launch.py
src/hwt901b_driver/: package.xml  setup.py
(+14 files in other folders)
